@@ -96,3 +96,4 @@
 - refer to windows by name etc (duplicates? fnmatch?)
 - n/p repeat is annoying, turn off
 - repeat should be a key flag and should be configurable (bind -r)
+- document -L and update socket path bits in tmux.1
